--- a/src/App.css
+++ b/src/App.css
@@ -2,28 +2,42 @@ body {
   font-family: 'Manrope';
 }
 
+:root {
+  --info: #049AAD;
+  --darkgrey: #5F5B5B;
+  --grey: #626A6A;
+  --orange: #99441C;
+  --lightorange: #9D5732;
+  --lightpink: #DCA5A5;
+  --darkorange: #943009;
+  --darkyellow: #FFA600;
+  --buttonface: #f0f0f0;
+}
+
 .display-flex {
   display: flex;
 }
 
 .modal-title {
-  color:rgb(95, 91, 91);
+  color: var(--darkgrey);
   font-weight: bold;
 }
 
 .modal-body {
-  padding: 5px;
+  padding: 0.1em;
 }
 
 .info-button {
-  height: 30px;
-  width: 90px;
-  margin-top: 20px;
+  background-color: var(--info);
+  border: none;
+  height: 2.2em;
+  width: 7em;
+  margin-top: 1.4em;
   border-radius: 20px;
   font-size: smaller;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding-top: 5px;
-  margin-bottom: 10px;
+  padding-top: 0.4em;
+  margin-bottom: 0.5em;
 }
 
 @media screen and (max-width: 992px) {
@@ -35,13 +49,13 @@ body {
 
 @media screen and (min-width: 992px){
   .modal-dialog {
-  margin-top: 50px;
+  margin-top: 3.2em;
   }
 }
 
 @media screen and (min-width: 992px) and (max-width:1200px) {
   .modal-dialog {
-    margin: 30px;
+    margin: 1.9em;
     max-width: none;
   }
 }
