--- a/src/Components/DataComponent/DataComponent.css
+++ b/src/Components/DataComponent/DataComponent.css
@@ -1,6 +1,6 @@
 .initial-text {
     font-weight: 500;
-    color: rgb(98, 106, 106);
+    color: var(--grey);
     font-size: 0.875rem;
     line-height: 1.43;
     letter-spacing: 0.01071em;
