--- a/src/Components/FoundationSection/FoundationSection.css
+++ b/src/Components/FoundationSection/FoundationSection.css
@@ -1,84 +1,93 @@
 .circle {
     float: left;
-    width: 60px;
-    height: 60px;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(255, 166, 0);
+    width: 3.8em;
+    height: 3.8em;
+    background-color: white;
+    border: 1px solid var(--darkyellow);
     border-radius: 50%;
     align-items: center;
 }
   
 .circle-text {
-    padding-left: 17px;
-    padding-top: 12px;
+  color: var(--info);
+  padding-left: 0.8em;
+  padding-top: 0.7em;
     
 }
   
 .foundation {
-    margin-left: 5px;
-    margin-top: 5px;
+    margin-left: 0.2em;
+    margin-top: 0.3em;
     font-size: 1rem;
     line-height: 1.75;
     letter-spacing: 0.00938em;
-    color: rgb(79, 88, 88);
+    color: var(--darkgrey);
     font-weight: 700;
-    padding-top: 10px;
+    padding-top: 0.7em;
     float: left;
+}
+
+.foundation-container {
+  padding-left: 0.5em;
+  padding-right: 0.3em;
 }
   
 .donate-button {
-    width:100px;
-    height:40px;
-    border-radius: 50px;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 1.75;
-    letter-spacing: 0.02857em;
-    float: right;
+  background-color: var(--info);
+  color: white;
+  border: none;
+  width:6.25em;
+  height:2.5em;
+  border-radius: 3.2em;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.75;
+  letter-spacing: 0.02857em;
+  float: right;
 }
   
 .follow-link {
+    color: var(--info);
     float: right;
     font-size: 1rem;
     line-height: 1.75;
     letter-spacing: 0.0338em;
     font-weight: 700;
-    margin-left: 7px;
-    margin-top: 23px;
-    background-color: rgb(255, 255, 255);
+    margin-left: 0.438em;
+    margin-top: 1.4em;
+    background-color: white;
     border: none;
 }
 
 @media screen and (max-width: 450px) {
     .foundation-div {
-      max-height: 60px;
+      max-height: 3.75em;
     }
     .circle {
-      min-width: 60px;
+      min-width: 3.75em;
     }
     .new-col {
       padding-right: 0;
+      padding-left: 0;
     }
     .foundation {
-      margin-top: -5px;
+      padding-top: 0
     }
 }
 
 @media screen and (max-width: 991px) {
     .new-col {
-      margin-top: -80px;
       display: flex;
       flex-direction: column-reverse;
       align-items: flex-end;
     }
     .donate-button {
+      margin-top: 0.313em;
       clear: both;
-      margin-right: -10px;
     }
     .follow-link {
       clear: both;
-      margin-top: 5px;
-      margin-right: 10px;
+      margin-top: 0.313em;
     }
     .foundation-div {
       padding: 0;
